--- a/example/course-resources/fork/level-data/resolve-conflict-index.yaml
+++ b/example/course-resources/fork/level-data/resolve-conflict-index.yaml
@@ -99,7 +99,7 @@ asset_index:
       表示所有的衝突都已經獲得解決  
 
       接下來要做的，就是建立${{t/revision}}把這個狀態保留下來  
-      引此，請按下如上圖中以紅框圈選的「Commit(${{提交}})」按鈕  
+      引此，請按下如上圖中以紅框圈選的「Commit(提交)」按鈕  
 
       完成之後，請按下下面的「執行」按鈕，檢查是否成功  
 
