Update searching by hash tutorial to adapt UX changes of fork

--- a/example/course-resources/fork/level-data/file-checkout-combo-index.yaml
+++ b/example/course-resources/fork/level-data/file-checkout-combo-index.yaml
@@ -57,11 +57,10 @@ asset_index:
       <div class="img-title">圖(二)</div>        
 
       如上圖所示  
-      首先，請按下紅框所圈選的搜尋按鈕，以展開搜尋介面  
-      然後，在搜尋介面上找到橘色框線圈選的範圍  
-      在裡面貼入剛才複製到剪貼簿的${{t/hash}}  
+      首先，請在鍵盤上按下「Ctrl」+「F」兩個按鍵的組合以展開如紅框圈選的搜尋介面  
+      然後，在搜尋介面上找到裡貼入剛才複製到剪貼簿的${{t/hash}}  
       貼上之後，按下「enter」鍵，${{t/gui}}就會自動選中符合條件的${{t/revision}}  
-      在上圖之中，就是綠色框線所圈選出來的${{t/revision}}
+      在上圖之中，就是橘色框線所圈選出來的${{t/revision}}
       
     checkout-file: |+2
       .md
