--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "mocha": "^6.1.4",
     "nested-error-stacks": "^2.1.0",
     "seedrandom": "^3.0.1",
-    "simple-git": "^2.24.0"
+    "simple-git": "^2.24.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.5.0"
   },
   "scripts": {
     "==== Node ====": "",
