--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "An interactive git tutorial",
   "main": "main.js",
+  "private": true,
   "dependencies": {
     "adm-zip": "^0.4.16",
     "fs-extra": "^8.0.0",
@@ -20,6 +21,7 @@
     "electron-mocha": "^8.0.2",
     "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.8.5",
+    "file-loader": "^6.2.0",
     "mocha": "^6.1.4",
     "nested-error-stacks": "^2.1.0",
     "seedrandom": "^3.0.1",
@@ -41,6 +43,7 @@
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "==== Build =====": "",
+    "pack": "webpack --config webpack.config.js",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
     "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --out=\"out\"",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
