--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
             "args": [
                 "save",
                 "nodegit",
-                "electron-4"
+                "electron"
             ],
         },
         {
