Copy index.html in webpack.config; Add node-loader to load .node files

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^6.2.0",
     "mocha": "^6.1.4",
     "nested-error-stacks": "^2.1.0",
+    "node-loader": "^1.0.2",
     "seedrandom": "^3.0.1",
     "simple-git": "^2.24.0",
     "webpack": "^4.46.0",
@@ -46,7 +47,7 @@
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "==== Build =====": "",
-    "pack": "webpack --config webpack.config.js && cp ./index.html ./dist/index.html",
+    "pack": "webpack --config webpack.config.js",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
     "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --out=\"out\"",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
