--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "node-loader": "^1.0.2",
     "seedrandom": "^3.0.1",
     "simple-git": "^2.24.0",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0"
   },
