Correct action configuration serialization tests
- Rename "referenceVersionName" -> "referenceName"
- Rename "refspecs" -> "refSpecs"
- Add class for AddRevisionAction and PullAction so they will be serialized independently
- Add represent function to several schemas

--- a/example/course-resources/fork/levels/abort-merge.yaml
+++ b/example/course-resources/fork/levels/abort-merge.yaml
@@ -73,7 +73,7 @@
         - !act.push 
           localSetupName: resolve-conflict-another
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
         
         - !act.writeFile 
           sourceAssetIds:
