--- a/example/course-resources/fork/levels/resolve-multiple-conflicts.yaml
+++ b/example/course-resources/fork/levels/resolve-multiple-conflicts.yaml
@@ -42,7 +42,7 @@
         - !act.push 
           localSetupName: resolve-conflict-another
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
         
         - !act.writeFile 
           sourceAssetIds: [ "$level-data/resolve-multiple-conflicts/file-this-1" ]
@@ -83,7 +83,7 @@
         - !act.push 
           localSetupName: resolve-conflict
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: resolve-multiple-conflicts-commit-and-push-1
 
@@ -109,7 +109,7 @@
         - !act.push 
           localSetupName: resolve-conflict-another
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
         
         - !act.writeFile 
           sourceAssetIds: [ "$level-data/resolve-multiple-conflicts/file-this-2" ]
@@ -150,7 +150,7 @@
         - !act.push 
           localSetupName: resolve-conflict
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: resolve-multiple-conflicts-commit-and-push-2
 
