--- a/json-schemas/config-commons.json
+++ b/json-schemas/config-commons.json
@@ -41,7 +41,7 @@
             "type": "string"
         }
     },
-    "refspecs": {
+    "refSpecs": {
         "type": "string",
         "description": "git ref specs"
     },
