--- a/example/course-resources/fork/levels/push-branch.yaml
+++ b/example/course-resources/fork/levels/push-branch.yaml
@@ -62,7 +62,7 @@
         - !act.push 
           localSetupName: share-history
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: "push-branch-push-1"
 
@@ -127,7 +127,7 @@
         - !act.push 
           localSetupName: share-history
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: "push-branch-push-2-and-3"
 
