--- a/example/course-resources/fork/levels/resolve-conflict.yaml
+++ b/example/course-resources/fork/levels/resolve-conflict.yaml
@@ -60,7 +60,7 @@
         - !act.push 
           localSetupName: resolve-conflict
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: resolve-conflict-push
 
