--- a/example/course-resources/fork/levels/resolve-with-editor.yaml
+++ b/example/course-resources/fork/levels/resolve-with-editor.yaml
@@ -41,7 +41,7 @@
         - !act.push 
           localSetupName: resolve-conflict-another
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
         
         - !act.writeFile 
           sourceAssetIds: [ "$level-data/resolve-with-editor/file-this" ]
@@ -105,7 +105,7 @@
         - !act.push 
           localSetupName: resolve-conflict
           remoteNickName: origin
-          refspecs: '+refs/heads/master:refs/heads/master'
+          refSpecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: resolve-with-editor-push
     
