Add serialization sample for SequentialAction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
 
         "!repoVcs mapping",
 
+        "!act.sequential sequence",
         "!act.writeFile mapping",
         "!act.removeFile mapping",
         "!act.moveFile mapping",
