--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "==== Build =====": "",
+    "pack": "webpack --config webpack.config.js --mode production",
     "pack-dev": "webpack --config webpack.config.js --mode development",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
     "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --out=\"out\"",
@@ -56,7 +57,8 @@
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron",
     "raw": "mocha --recursive \"./test/tests/*.js\"",
-    "test-pack": "npm run pack-dev && electron ./dist/main.js"
+    "test-pack": "npm run pack-dev && electron ./dist/main.js",
+    "test-pack-production": "npm run pack && electron ./dist/main.js"
   },
   "author": "zedaizd",
   "license": "ISC"
