--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "intergitive",
   "version": "0.0.1",
   "description": "An interactive git tutorial",
-  "main": "main.js",
+  "main": "dist/src/main.js",
   "private": true,
   "engines": {
     "node": ">=12.20"
@@ -51,9 +51,11 @@
     "==== Build =====": "",
     "pack": "webpack --config webpack.config.js --mode production",
     "pack-dev": "webpack --config webpack.config.js --mode development",
+    "pack-with-externals": "webpack --config webpack.config.js --mode production --env=pack=true",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
     "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --out=\"out\"",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
+    "build-pack-win64": "npm run \"load-native-electron\" && npm run \"pack-with-externals\" && electron-packager ./dist intergitive --platform=win32 --arch=x64 --out=\"out\"",
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron",
     "raw": "mocha --recursive \"./test/tests/*.js\"",
