Build to root folder instead of dist

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "intergitive",
   "version": "0.0.1",
   "description": "An interactive git tutorial",
-  "main": "dist/src/main.js",
+  "main": "main.js",
   "private": true,
   "engines": {
     "node": ">=12.20"
@@ -59,8 +59,8 @@
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron",
     "raw": "mocha --recursive \"./test/tests/*.js\"",
-    "test-pack": "npm run pack-dev && electron ./dist/src/main.js",
-    "test-pack-production": "npm run pack && electron ./dist/src/main.js"
+    "test-pack": "npm run pack-dev && electron ./main.js",
+    "test-pack-production": "npm run pack && electron ./main.js"
   },
   "author": "zedaizd",
   "license": "ISC"
