--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "pack-dev": "webpack --config webpack.config.js --mode development",
     "pack-with-externals": "webpack --config webpack.config.js --mode production --env=pack=true",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
-    "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --out=\"out\"",
+    "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --ignore\"^/dev\" --ignore=\"^/lib\" --ignore\"^/src\" --out=\"out\"",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
-    "build-pack-win64": "npm run \"load-native-electron\" && npm run \"pack-with-externals\" && electron-packager ./dist intergitive --platform=win32 --arch=x64 --out=\"out\"",
+    "build-pack-win64": "npm run \"load-native-electron\" && npm run pack && npm run build-win64",
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron",
     "raw": "mocha --recursive \"./test/tests/*.js\"",
