--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.16",
+    "bootstrap": "^5.0.0-beta2",
     "fs-extra": "^8.0.0",
     "js-yaml": "^3.13.1",
     "marked": "^0.7.0",
@@ -20,12 +21,14 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "csp-html-webpack-plugin": "^5.1.0",
+    "css-loader": "^5.1.1",
     "electron": "^8.2.5",
     "electron-mocha": "^8.0.2",
     "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.8.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "mocha": "^6.1.4",
     "nested-error-stacks": "^2.1.0",
     "node-loader": "^1.0.2",
