Correct progress serialization bug

--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron",
     "raw": "mocha --recursive \"./test/tests/*.js\"",
-    "test-pack": "npm run pack-dev && electron ./main.js",
-    "test-pack-production": "npm run pack && electron ./main.js"
+    "test-pack": "npm run \"load-native-electron\" && npm run pack-dev && electron ./main.js",
+    "test-pack-production": "npm run \"load-native-electron\" && npm run pack && electron ./main.js"
   },
   "author": "zedaizd",
   "license": "ISC"
