--- a/example/course-resources/fork/level-data/commit-one-file-index.yaml
+++ b/example/course-resources/fork/level-data/commit-one-file-index.yaml
@@ -67,25 +67,21 @@ asset_index:
     stage-new-file: |+2
       .md
       接下來，我們將專心於操作上面圖(四)紅框圈選的範圍  
-      請參考下面圖(五-1)和圖(五-2)，按照接下來指示的步驟操作：  
+      請參考下面圖(五)和圖(六)，按照接下來指示的步驟操作：  
 
-      <div class="side-by-side-container">
-        <div style="float: left;width: 46%;padding: 2%;">
-          <img src="{{images/stage-new-file}}" alt="illustration">
-          <div class="img-title">圖(五-1)</div>  
-        </div>
-        <div style="float: left;width: 46%;padding: 2%;">
-          <img src="{{images/new-file-staged-add-commit}}" alt="illustration">
-          <div class="img-title">圖(五-2)</div>  
-        </div>
-      </div> 
+      ![illustration]({{images/stage-new-file}})
+      <div class="img-title">圖(五)</div>  
 
-      如上圖(五-1)紅框圈選所示，我們會看到剛才新增加的「new.txt」被列在左上方「${{st/unstaged-changes}}」的列表中  
+
+      如上圖(五)紅框圈選所示，我們會看到剛才新增加的「new.txt」被列在左上方「${{st/unstaged-changes}}」的列表中  
       請使用滑鼠左鍵選取 「new.txt」 使它呈現藍底反白  
-      然後按下圖(五-1)橘框所圈選的「${{st/act-stage}}」按鈕  
+      然後按下圖(五)橘框所圈選的「${{st/act-stage}}」按鈕  
 
-      按下按鈕後，我們會注意到「new.txt」被移動到左下方的「${{st/staged-changes}}」，如圖(五-2)所示  
+      按下按鈕後，我們會注意到「new.txt」被移動到左下方的「${{st/staged-changes}}」，如下圖(六)所示  
       這個操作，表示我們想要把新增的「new.txt」紀錄到版本歷史中  
+
+      ![illustration]({{images/new-file-staged-add-commit}})
+      <div class="img-title">圖(六)</div>  
 
       完成操作後，請按下「確認」按鈕檢核是否操作正確並繼續
 
@@ -95,10 +91,10 @@ asset_index:
       決定了想要紀錄的檔案是剛才新增的「new.txt」之後  
       我們只需要再留下一些關於這次版本紀錄的訊息，就可以新增一個版本紀錄了  
 
-      請參考下面圖(六)，按照接下來的指示操作  
+      請參考下面圖(七)，按照接下來的指示操作  
 
       ![illustration]({{images/fill-commit-message}})  
-      <div class="img-title">圖(六)</div>  
+      <div class="img-title">圖(七)</div>  
 
       請使用滑鼠左鍵點擊上圖紅框圈選的文字輸入欄  
       然後輸入以下的訊息：  
@@ -116,17 +112,17 @@ asset_index:
       .md
       恭喜！我們終於達成新增一份版本到${{t/repo}}的任務  
 
-      為了檢視我們的成果，請如下圖(七)所示  
+      為了檢視我們的成果，請如下圖(八)所示  
       按下紅框圈選的${{st/all-commits-tab}}，切換到檢視${{t/graph}}的介面  
 
       ![illustration]({{images/back-to-all-commits-tab}})  
-      <div class="img-title">圖(七)</div>  
+      <div class="img-title">圖(八)</div>  
       
-      切換完成後，如下圖(八)所示  
+      切換完成後，如下圖(九)所示  
       我們會看見${{t/graph}}上從六個圓點變成七個，最上面的一個就是剛才新增加的「${{level-data/commit-one-file/commit-message}}」  
 
       ![illustration]({{images/commit-added-graph-view}})  
-      <div class="img-title">圖(八)</div>  
+      <div class="img-title">圖(九)</div>  
 
       這個新增加的版本跟其它的六個版本一樣  
       我們可以任意的瀏覽它的${{t/file-tree}}，也可以在需要的時候隨意的切換過去  
@@ -164,7 +160,7 @@ asset_index:
       這時候，或許你會開始好奇，到底「第 X 號提交」的**「${{t/commit-s}}」**是甚麼意思呢？  
 
       **「${{t/commit-s}}」**其實是從英文「commit」而來  
-      還記得我們增加版本的時候，在上面的圖(六)中說明的最後一個步驟就是要「commit」  
+      還記得我們增加版本的時候，在上面的圖(七)中說明的最後一個步驟就是要「commit」  
       意思是要「提交」一個新的版本  
 
       雖然${{t/commit-s-f}}是表達建立版本的動作，但是在各家 git 教學或說明文件中，也時常衍伸來指稱建立出來的版本  
@@ -190,12 +186,12 @@ asset_index:
       其實其中的 3. 與 4. 的步驟是匆匆帶過，並沒有明確說明要如何達成  
 
       實際上我們到底是如何完成的呢？  
-      其實是拆分成三步來完成的。請參考以下圖(九)所逐格顯示的第 3. 到 5. 步驟   
+      其實是拆分成三步來完成的。請參考以下圖(十)所逐格顯示的第 3. 到 5. 步驟   
 
       ![illustration]({{images/brief-commit-concept}})  
-      <div class="img-title">圖(九)</div>  
+      <div class="img-title">圖(十)</div>  
 
-      上面圖(九)左半顯示的是概念上 git 系統發生的事情，圖(九)右半是我們實際作的操作  
+      上面圖(十)左半顯示的是概念上 git 系統發生的事情，圖(十)右半是我們實際作的操作  
       發生的事情依序介紹如下  
 
       1. 資料夾的初始狀態，一開始是紅色的
@@ -209,7 +205,7 @@ asset_index:
       現在，我們終於能充分的了解新增一個版本背後所發生的事情  
       但是在整個操作的過程中，也埋下了新的謎團：  
 
-      1. 從圖(九)左半可以注意到，我們的概念圖裡面出現了一個新的區域－－中間的暫存區  
+      1. 從圖(十)左半可以注意到，我們的概念圖裡面出現了一個新的區域－－中間的暫存區  
          這個暫存區到底有甚麼功用，又應該如何使用呢？  
       2. 出現了兩個陌生的字眼： ${{t/staged-en}}、${{t/unstaged-en}}。他們是甚麼意思呢？
 
