--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug Main Process",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceRoot}",
+            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+
+            // This is the important stuff
+            "program": "${workspaceRoot}/lib/main.js",
+            "outFiles": [
+                "${workspaceRoot}/main.js"
+            ],
+            "sourceMaps": true
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "Bake",
